--- a/Arcade/Arcade/Properties/Resources.resx
+++ b/Arcade/Arcade/Properties/Resources.resx
@@ -139,7 +139,7 @@
   <data name="asteroid2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\asteroid2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="space backround" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="space_backround" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\space backround1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="astHit" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -147,5 +147,47 @@
   </data>
   <data name="fire" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fire.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="fly" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fly.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="frogger_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\frogger background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="froggy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\froggy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="froggy_Down" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\froggy_Down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="froggy_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\froggy_Left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="froggy_Right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\froggy_Right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="get_images" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\get images.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="green_car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\green car.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="grey_car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\grey car.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LongLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LongLog.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pink_car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pink car.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="smalllog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\smalllog.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="truckLong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\truckLong.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="turtle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\turtle.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
