--- a/Arcade/Arcade/Properties/Resources.resx
+++ b/Arcade/Arcade/Properties/Resources.resx
@@ -199,4 +199,13 @@
   <data name="ship_blowing_up_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ship-blowing-up-2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BattleShipBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BattleShipBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BattleShipFireIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BattleShipFireIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BattleShipMissIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BattleShipMissIcon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
