--- a/Arcade/Arcade/NumberShuffle.resx
+++ b/Arcade/Arcade/NumberShuffle.resx
@@ -498,6 +498,9 @@
         CiigA20uOaKKAEC7aUjmiigBMYFLjmiigAxkUbeaKKAE20BcCiimAFeKXHNFFIBAKXbRRQB//9k=
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEASABIAAD/4QEqRXhpZgAATU0AKgAAAAgABwESAAMAAAABAAEAAAEaAAUAAAAB
